Almost finished Layout

--- a/index.html
+++ b/index.html
@@ -80,15 +80,10 @@
 
         <footer class="page-footer font-small">
 
-            <div class="footer-copyright text-center py-3">© 2018 Copyright:
+            <div class="footer-copyright text-center py-3">©Copyright
             </div>
 
         </footer>
     </body>
 
 </html>
-
-
-<div class="container">
-
-</div>
