--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css"
+            integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <title>Contact</title>
+    </head>
+
+    <body>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" href="#">Brandon Conover</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto w-100 justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Bootstrap_Portfolio/index.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Bootstrap_Portfolio/portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Bootstrap_Portfolio/contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+
+
+
+        <main role="main" class="container">
+            <div class="jumbotron">
+                <h1>Contact</h1>
+                <hr>
+                <div class="row">
+                    <div class="col-md-12">
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Name</label>
+                                <input type="name" class="form-control" id="example_name" placeholder="First Last">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="example_email" aria-describedby="emailHelp"
+                                    placeholder="Enter email">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <input type="message" class="form-control" id="example_message" placeholder="Type Message Here..."
+                                    style="height:200px">
+                            </div>
+                            <button type="
+                                submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+        </main>
+
+
+        <footer class="page-footer font-small">
+
+            <div class="footer-copyright text-center py-3">©Copyright
+            </div>
+
+        </footer>
+    </body>
+
+</html>
