--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,14 @@
                 <h1>Portfolio Gallery</h1>
                 <hr>
                 <div class="row">
-
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4"></div>
                 </div>
         </main>
 
