--- a/portfolio.html
+++ b/portfolio.html
@@ -40,16 +40,61 @@
             <div class="jumbotron">
                 <h1>Portfolio Gallery</h1>
                 <hr>
-                <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
-                    <div class="col-md-4"></div>
-                </div>
+                <div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="thumbnail">
+                                <a href="/w3images/lights.jpg" target="_blank">
+                                    <img src="assets/images/animals-q-g-200-200-7.jpg" alt="Lights" style="width:100%">
+                                    <div class="caption">
+                                        <p class="text-center font-weight-bold">Hangman</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="thumbnail">
+                                <a href="/w3images/lights.jpg" target="_blank">
+                                    <img src="assets/images/animals-q-g-200-200-7.jpg" alt="Lights" style="width:100%">
+                                    <div class="caption">
+                                        <p class="text-center font-weight-bold">RPG Game</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="thumbnail">
+                                <a href="/w3images/lights.jpg" target="_blank">
+                                    <img src="assets/images/animals-q-g-200-200-7.jpg" alt="Lights" style="width:100%">
+                                    <div class="caption">
+                                        <p class="text-center font-weight-bold">Trivia</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="thumbnail">
+                                <a href="/w3images/lights.jpg" target="_blank">
+                                    <img src="assets/images/animals-q-g-200-200-7.jpg" alt="Lights" style="width:100%">
+                                    <div class="caption">
+                                        <p class="text-center font-weight-bold">Rutgers Info Widget</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="thumbnail">
+                                <a href="/w3images/lights.jpg" target="_blank">
+                                    <img src="assets/images/animals-q-g-200-200-7.jpg" alt="Lights" style="width:100%">
+                                    <div class="caption">
+                                        <p class="text-center font-weight-bold">Rock Paper Scissors</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
         </main>
 
 
