added Psycic game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,19 @@
                 <hr>
                 <div>
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-3">
                             <div class="thumbnail">
                                 <a href="/w3images/lights.jpg" target="_blank">
+                                    <img src="assets/images/animals-q-g-200-200-7.jpg" alt="Lights" style="width:100%">
+                                    <div class="caption">
+                                        <p class="text-center font-weight-bold">Psychic Game</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="thumbnail">
+                                <a href="/w3images/lights.jpg" target="_blank" href="https://brandonpc.github.io/Psychic_Game/">
                                     <img src="assets/images/animals-q-g-200-200-7.jpg" alt="Lights" style="width:100%">
                                     <div class="caption">
                                         <p class="text-center font-weight-bold">Hangman</p>
@@ -52,7 +62,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-3">
                             <div class="thumbnail">
                                 <a href="/w3images/lights.jpg" target="_blank">
                                     <img src="assets/images/animals-q-g-200-200-7.jpg" alt="Lights" style="width:100%">
@@ -62,7 +72,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-3">
                             <div class="thumbnail">
                                 <a href="/w3images/lights.jpg" target="_blank">
                                     <img src="assets/images/animals-q-g-200-200-7.jpg" alt="Lights" style="width:100%">
@@ -74,7 +84,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-3">
                             <div class="thumbnail">
                                 <a href="/w3images/lights.jpg" target="_blank">
                                     <img src="assets/images/animals-q-g-200-200-7.jpg" alt="Lights" style="width:100%">
@@ -84,7 +94,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-3">
                             <div class="thumbnail">
                                 <a href="/w3images/lights.jpg" target="_blank">
                                     <img src="assets/images/animals-q-g-200-200-7.jpg" alt="Lights" style="width:100%">
