added link to Crystal game

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,6 +105,18 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="thumbnail">
+                                <a href="/w3images/lights.jpg" target="_blank" href="https://brandonpc.github.io/unit-4-game/">
+                                    <img src="assets/images/animals-q-g-200-200-7.jpg" alt="Lights" style="width:100%">
+                                    <div class="caption">
+                                        <p class="text-center font-weight-bold">Crystal Collector</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
         </main>
 
 
